--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -17,8 +17,15 @@
     height: 50px;
     background-color: var(--bg-1);
     mask-image: url('../../../public/assets/triangle.svg');
+    z-index: 0;
 }
 
+.shadow {
+    position: absolute;
+    top: 0;
+    width: 110%;
+    box-shadow: 0px -30px 100px 20px black;
+}
 
 .contact__header {
     font-size: 4rem;
@@ -48,13 +55,13 @@
     max-width: 650px;
     margin-bottom: 80px;
     border-radius: 10px;
-    background-color: var(--bg-3);
+    background-color: var(--bg-2);
 }
 
 .message__header {
     padding: var(--contact-padding);
     border-radius: 10px 10px 0px 0px;
-    background-color: var(--bg-5);
+    background-color: var(--bg-3);
 }
 
 .message__container > h3 {
@@ -69,7 +76,7 @@
     font-size: 1.2rem;
     border: none;
     outline: none;
-    background-color: var(--bg-3);
+    background-color: var(--bg-2);
     color: var(--white);
 }
 
@@ -80,7 +87,7 @@
     resize: none;
     border: none;
     outline: none;
-    background-color: var(--bg-3);
+    background-color: var(--bg-2);
     color: var(--white);
 }
 
@@ -274,5 +281,9 @@
 
     .checkmark {
         width: 250px;
+    }
+
+    .contact__header__underline {
+        width: 265px;
     }
 }
