--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -5,7 +5,7 @@
     position: fixed;
     top: 0;
     right: -300px;
-    z-index: 2;
+    z-index: 3;
 
     display: flex;
     flex-direction: column;
@@ -41,4 +41,8 @@
 
 .menu__list > li > a:hover {
     color: var(--accent-magenta);
+}
+
+.invisible {
+    display: none;
 }
