--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -3,67 +3,48 @@ a:link {
 }
 
 .intro {
+    position: relative;
     background-color: var(--bg-1);
     display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 40px 0px;
+    margin-top: 50px;
 }
 
-.intro__left {
-    flex: 0.5;
-    overflow: hidden;
+.intro__container {
+    margin: 0px 20px;
+    margin-bottom: 400px;
 }
 
-.intro__right {
-    flex: 0.5;
-    position: relative;
-    margin: 40px 0px;
-}
-
-.image__container {
-    position: relative;
-    width: 700px;
-    height: 700px;
-    background-color: var(--accent-magenta);
-    border-radius: 50%;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    float: right;
-}
-
-.me {
+.me__container {
     position: absolute;
-    width: 1900px;
-    bottom: -900px;
+    right: 0;
+    bottom: -350px;
 }
 
-.intro__right__container {
-    width: 100%;
-    height: 100%;
-    padding-left: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.me2 {
+    width: 750px;
+    filter: grayscale();
 }
 
-.intro__h1 {
-    font-size: 60px;
+.intro__container > h1 {
+    font-size: 9rem;
     margin: 10px 0px;
     color: var(--white);
 }
 
-.intro__h2 {
-    font-size: 35px;
+.intro__container > h2 {
+    font-size: 5rem;
     color: var(--white);
 }
 
-.intro__h3 {
-    font-size: 30px;
+.intro__container > h3 {
+    font-size: 3rem;
     color: var(--white);
 }
 
 .intro__jobs {
-    font-size: inherit;
     color: var(--accent-magenta);
 }
 
