--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -20,20 +20,6 @@
     font-size: 4rem;
 }
 
-.skills__header__underline {
-    height: 5px;
-    width: 100%;
-    opacity: 0;
-    transform: scaleX(0);
-    transition: 1s ease;
-    background-color: var(--white);
-}
-
-.skills__visible {
-    opacity: 1;
-    transform: scaleX(1);
-}
-
 .skills__grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -45,9 +31,12 @@
 }
 
 .skills__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    opacity: 0;
-    transform: translateX(-50px);
+    opacity: 1;
 }
 
 .skills__container > h2 {
@@ -72,19 +61,6 @@
 
 .js {
     width: 50px;
-}
-
-.react__container { transition: 800ms ease; }
-
-.js__container { transition: 800ms ease; }
-
-.c__container { transition: 800ms ease; }
-
-.py__container { transition: 800ms ease; }
-
-.react__anim, .js__anim, .c__anim, .py__anim {
-    opacity: 1;
-    transform: translateX(0px);
 }
 
 @media (max-width: 1000px) {
