--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -69,206 +69,20 @@
     position: relative;
     width: 90vw;
     max-width: 1000px;
-    display: grid;
-    grid-template-rows: 1fr 3fr;
     border-radius: 10px;
     margin-top: 50px;
-    padding: 35px;
+    padding: 50px;
     background-color: var(--bg-2);
     transition: 750ms ease;
 }
 
-.country__visible {
-    opacity: 1;
-    transform: translateX(0px);
-}
-
-.country__desc > h2 {
-    font-size: 3rem;
-    color: var(--white);
-}
-
-.country__desc > h4 {
-    margin-top: 20px;
-    font-size: 1.5rem;
-    font-weight: 400;
-    color: var(--white);
-}
-
-.country__specs {
-    position: absolute;
-    display: flex;
-    bottom: 15px;
-    left: 25px;
-}
-
-.country__specs > img {
-    border-radius: 3px;
-}
-
-.country__js {
-    width: 35px;
-    height: 35px;
-    margin-top: 8px;
-}
-
-.html {
-    width: 50px;
-    height: 50px;
-    margin-top: 1px;
-    margin-left: 2px;
-}
-
-.css {
-    width: 37px;
-    height: 38.5px;
-    margin-top: 7px;
-}
-
-.answer__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.answer__container > img {
-    height: 210px;
-    max-width: 600px;
-    margin-top: 30px;
-    filter: invert();
-}
-
-.answer__input {
-    position: relative;
-    margin: 30px 0px 10px;
-    height: 45px;
-    font-size: 1.3rem;
-    width: 150px;
-    text-align: center;
-    background-color: transparent;
-    border: none;
-    border-bottom: 2px solid white;
-    border-radius: 1px;
-    outline: none;
-    transition: 200ms ease-in-out;
-    color: var(--white);
-}
-
-.answer__input:hover {
-    background-color: var(--faded-white);
-}
-
-.answer__input:focus {
-    width: 180px;
-}
-
-.country__data__container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px 0px 20px;
-}
-
-.answer__skip {
-    width: 80px;
-    height: 35px;
-    font-size: 1rem;
-    font-weight: 500;
-    border: 2px solid var(--faded-white);
-    background-color: transparent;
-    color: var(--white);
-    transition: all 300ms ease;
-}
-
-.answer__skip:hover {
-    border: 2px solid var(--faded-white-hover);
-}
-
-.down__anim {
-    transform: scale(0.95);
-    transition: 0ms;
-}
-
-.up__anim {
-    transform: scale(1);
-    transition: 0ms;
-}
-
-.score__container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 200px;
-    min-height: 35px;
-    margin-left: 20px;
-    padding: 0px 10px;
-    color: var(--white);
-    background-color: var(--bg-4);
-    overflow: auto;
-}
-
-.country__score {
-    text-align: center;
-    font-weight: 500;
-    font-size: 1.2rem;
-}
-
-.answer__reveal__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 15px;
-    margin-bottom: 40px;
-    opacity: 0;
-    transform: scale(0);
-    color: var(--white);
-    background-color: var(--bg-4);
-    transition: 300ms ease;
-}
-
-.answer__reveal__container > h2 {
-    font-weight: 400;
-}
-
-.reveal {
-    opacity: 1;
-    transform: scale(1);
-}
-
-.unreveal {
-    transform: scaleY(0);
-}
-
-.answer {
-    font-size: 1.75rem;
-    font-weight: 500;
-}
-
-@media (max-width: 1000px) {
-    .answer__container > img {
-        max-width: calc(90vw - 100px);
-    }
+.country__guessr {
+    width: 100%;
+    background-color: red;
 }
 
 @media (max-width: 550px) {
     .projects__header {
         font-size: 3rem;
-    }
-
-    .country__desc > h2 {
-        font-size: 2.25rem;
-        text-align: center;
-    }
-
-    .country__desc > h4 {
-        font-size: 1.5rem;
-        text-align: center;
-    }
-
-    .projects__header__underline {
-        width: 200px;
-        transition: 300ms;
     }
 }
