--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -27,31 +27,20 @@
 .logo__desc {
     font-size: 2em;
     font-weight: 300;
-    border-right: 2px solid var(--white);
     padding-right: 20px;
-}
-
-.nav__menu__list {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-}
-
-.nav__menu__list > a {
-    margin-right: 20px;
-    font-size: 1.3rem;
-    transition: 75ms ease;
-    color: var(--white);
-}
-
-.nav__menu__list > a:hover {
-    color: var(--accent-magenta);
 }
 
 .nav__icon__container {
     position: absolute;
+    display: flex;
+    align-items: center;
     top: 13px;
     right: 10px;
+}
+
+.navbar__email {
+    font-weight: normal;
+    margin-right: 20px;
 }
 
 .github {
@@ -112,11 +101,4 @@
 
 .revert__color {
     background-color: var(--main-color);
-}
-
-@media (max-width: 980px) {
-    .logo__desc { border-right: transparent; }
-    .nav__menu__list { display: none; }
-    .hamburger > * { display: block; }
-    .nav__icon__container { margin-right: 60px; }
 }
