--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -76,9 +76,23 @@
     transition: 750ms ease;
 }
 
+.projects__country > h1 {
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+    color: var(--white);
+}
+
+.projects__country > h2 {
+    font-size: 1.3rem;
+    font-weight: 400;
+    color: var(--white);
+}
+
 .country__guessr {
+    margin-top: 20px;
     width: 100%;
     background-color: red;
+    border: 2px solid white;
 }
 
 @media (max-width: 550px) {
